@@ -1,0 +1,9 @@
+module Prowler
+  module Priority
+    VERY_LOW  = -2
+    MODERATE  = -1
+    NORMAL    = 0
+    HIGH      = 1
+    EMERGENCY = 2
+  end
+end
