@@ -1,3 +1,3 @@
-class Prowler
+module Prowler
   VERSION = "1.2.0"
 end
